// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxInput Component CheckboxInput renders highlighted 1`] = `
<div>
  <div
    class="field gds-checkbox-container"
  >
    <label
      class="input-checkbox-field-read-only"
      for="checkbox-31"
      tabindex="0"
    >
      <div
        aria-checked="false"
        aria-label="checkbox label 0"
        class="checkbox-marker"
        id="checkbox-31"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 0
    </label>
    <label
      class="input-checkbox-field-read-only input-checkbox-field-checked"
      for="checkbox-32"
      tabindex="0"
    >
      <div
        aria-checked="true"
        aria-label="checkbox label 1"
        class="checkbox-marker"
        id="checkbox-32"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square-check"
        />
      </div>
      checkbox label 1
    </label>
    <label
      class="input-checkbox-field-read-only"
      for="checkbox-33"
      tabindex="0"
    >
      <div
        aria-checked="false"
        aria-label="checkbox label 2"
        class="checkbox-marker"
        id="checkbox-33"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 2
    </label>
    <label
      class="input-checkbox-field-read-only"
      for="checkbox-34"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 3"
        class="checkbox-marker"
        id="checkbox-34"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 3
    </label>
    <label
      class="input-checkbox-field-read-only field-highlighted"
      for="checkbox-35"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 4"
        class="checkbox-marker"
        id="checkbox-35"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 4
    </label>
    <label
      class="input-checkbox-field-read-only"
      for="checkbox-36"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 5"
        class="checkbox-marker"
        id="checkbox-36"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 5
    </label>
  </div>
</div>
`;

exports[`CheckboxInput Component CheckboxInput renders with input 1`] = `
<div>
  <div
    class="field gds-checkbox-container"
  >
    <label
      class=""
      for="checkbox-1"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 0"
        class="checkbox-marker"
        id="checkbox-1"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 0
    </label>
    <label
      class="input-checkbox-field-checked"
      for="checkbox-2"
      tabindex="0"
    >
      <div
        aria-checked="true"
        aria-label="checkbox label 1"
        class="checkbox-marker"
        id="checkbox-2"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square-check"
        />
      </div>
      checkbox label 1
    </label>
    <label
      class=""
      for="checkbox-3"
      tabindex="0"
    >
      <div
        aria-checked="false"
        aria-label="checkbox label 2"
        class="checkbox-marker"
        id="checkbox-3"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 2
    </label>
    <label
      class=""
      for="checkbox-4"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 3"
        class="checkbox-marker"
        id="checkbox-4"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 3
    </label>
    <label
      class=""
      for="checkbox-5"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 4"
        class="checkbox-marker"
        id="checkbox-5"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 4
    </label>
    <label
      class=""
      for="checkbox-6"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 5"
        class="checkbox-marker"
        id="checkbox-6"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 5
    </label>
  </div>
</div>
`;

exports[`CheckboxInput Component CheckboxInput renders with no options 1`] = `
<div>
  <div
    class="field gds-checkbox-container"
  />
</div>
`;
